prevent remove button from stretching height

--- a/src/stylesheets/_Main.scss
+++ b/src/stylesheets/_Main.scss
@@ -11,7 +11,7 @@
   .single-todo {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
   }
 
   li {
@@ -24,6 +24,8 @@
 
   button {
     flex-basis: 12.5%;
+    padding: 5px 0;
+    align-self: flex-end;
     border: none;
     border-radius: 5px;
     display: inline-block;
